src/snapshots/afrotd__parser__tests__rule_html_9.2.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.2.3 Unfaire Aktionen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die folgenden Aktionen sind unfair:
            </p>
            <ol type="a">
                <li>Ein Team weigert sich, innerhalb von zwei Minuten weiter zu
                spielen, nachdem der Referee es zum Spielen aufgefordert hat.
                </li>
                <li>Ein Team begeht wiederholt Fouls, die nur mit der
                Halbierung der Distanz zur Endzone geahndet werden können.
                </li>
                <li>
                    <p>
                        Während des Spieles ereignet sich eine offensichtlich
                        unfaire Aktion, die nicht speziell in den Regeln
                        aufgeführt ist. Das schließt Ersatzspieler, Coaches
                        oder andere den Regeln unterliegende Personen,
                        ausgenommen Spieler oder Schiedsrichter, ein, die in
                        irgendeiner Weise einen freien Ball oder einen Spieler
                        behindern, während der Ball im Spiel ist. (A.R.
                        4.2.1.II, 9.2.3.I und 9.2.3.IV)
                    </p>
                    <p>
                        <strong>Strafe: Unsportliches Verhalten. Der Referee
                        darf jede Strafe verhängen, die er für angemessen hält.
                        Dazu gehört auch die Wiederholung des Downs inklusive
                        einer 15-Meterstrafe, die Anerkennung von Punkten, die
                        Unterbrechung oder der Abbruch eines Spieles
                        [S27].</strong>
                    </p>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.2.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
