src/snapshots/afrotd__parser__tests__rule_html_9.2.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.2.4 Kontakt mit einem Schiedsrichter
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Während des Spieles dürfen Personen, die den Regeln unterliegen
                (Regel 1.1.6), keinen Schiedsrichter absichtlich in grober
                Weise berühren.
            </p>
            <p>
                <strong>Strafe: Unsportliches Verhalten. Wird als Dead Ball
                Foul durchgeführt. 15 Meter vom Succeeding Spot und
                automatische Disqualifikation. Automatisch First Down für Team
                B-Fouls, soweit das nicht in Konflikt zu anderen Regeln steht
                [S7, S27 und S47].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.2.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
