src/snapshots/afrotd__parser__tests__rule_html_9.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.3.1 Wer darf blocken
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Spieler jedes Teams dürfen gegnerische Spieler blocken,
                vorausgesetzt, es handelt sich nicht um Passbehinderung, die
                Behinderung beim Fangen eines Kicks oder ein persönliches Foul
                (Ausnahme: Regel 6.1.12 und 6.5.4).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
