src/snapshots/afrotd__parser__tests__rule_html_9.3.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.3.2 Behinderung für oder Helfen des Ballträgers oder Passers
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Der Ballträger oder der Passer darf seine Hände oder Arme
                benutzen, um einen Gegner abzuwehren oder wegzudrücken.
                </li>
                <li>Der Ballträger darf keinen Mitspieler ergreifen, und kein
                anderer Spieler seines Teams darf den Ballträger ergreifen,
                ziehen oder anheben, um ihm in seiner Vorwärtsbewegung zu
                helfen (A.R. 9.3.2.I).
                </li>
                <li>
                    <p>
                        Mitspieler des Ballträgers dürfen andere Spieler durch
                        Wegblocken für den Ballträger oder Passer behindern;
                        sie dürfen sich dabei nicht durch Greifen, Umfassen
                        oder Unterhaken miteinander verhaken, während sie einen
                        Gegner berühren.
                    </p>
                    <p>
                        <strong>Strafe: 5 Meter [S44]</strong>
                    </p>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.3.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
